--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <!--==================== CSS ====================-->
         <link rel="stylesheet" href="assets/css/style.css">
 
+
         <title>Muhammad Rizky | Full-stack Ruby Developer</title>
     </head>
     <body>
@@ -387,6 +388,189 @@
               </div>
             </section>
 
+
+
+            <!--==================== QUALIFICATION ====================-->
+            <section class="qualification section">
+              <h2 class="section__title">Qualification</h2>
+              <span class="section__subtitle">certifications and experiances</span>
+
+              <div class="portfolio__container certificate-container container swiper mySwiper">
+                <div class="swiper-wrapper">
+
+                  <!--==================== CERTIFICATE 1====================-->
+                  <div class="certificate__content swiper-slide">
+                    <img src="assets/certificates/muhammad-rizky-diploma.jpg" alt="" class="certificate__img">
+                    <!-- <a href="https://github.com/rizkyalbiruni/sync" target="_blank" class="certif_button">
+                      Detail
+                      <i class="uil uil-arrow-right button__icon"></i>
+                    </a> -->
+                  </div>
+
+
+                  <!--==================== CERTIFICATE 2====================-->
+                  <div class="certificate__content swiper-slide">
+                    <img src="assets/certificates/Coursera N3UB8H5PS6GQ_page-0001.jpg" alt="" class="certificate__img">
+                    <a href="https://www.coursera.org/account/accomplishments/verify/N3UB8H5PS6GQ" target="_blank" class="certif_button">
+                      Detail
+                      <i class="uil uil-arrow-right button__icon"></i>
+                    </a>
+                  </div>
+
+                  <!--==================== CERTIFICATE 3====================-->
+                  <div class="certificate__content swiper-slide">
+                    <img src="assets/certificates/Coursera NSB7KVEWW2RL_page-0001.jpg" alt="" class="certificate__img">
+                    <a href="https://www.coursera.org/account/accomplishments/verify/NSB7KVEWW2RL" target="_blank" class="certif_button">
+                      Detail
+                      <i class="uil uil-arrow-right button__icon"></i>
+                    </a>
+                  </div>
+
+
+                    <!--==================== CERTIFICATE 4====================-->
+                    <div class="certificate__content swiper-slide">
+                    <img src="assets/certificates/Coursera 4WT9JQUEK58R_page-0001.jpg" alt="" class="certificate__img">
+                    <a href="https://www.coursera.org/account/accomplishments/verify/4WT9JQUEK58R" target="_blank" class="certif_button">
+                      Detail
+                      <i class="uil uil-arrow-right button__icon"></i>
+                    </a>
+                    </div>
+
+                    <!--==================== CERTIFICATE 5====================-->
+                    <div class="certificate__content swiper-slide">
+                      <img src="assets/certificates/Coursera SGXJ8N85H43Z_page-0001.jpg" alt="" class="certificate__img">
+                      <a href="https://www.coursera.org/account/accomplishments/verify/SGXJ8N85H43Z" target="_blank" class="certif_button">
+                        Detail
+                        <i class="uil uil-arrow-right button__icon"></i>
+                      </a>
+                      </div>
+
+                      <!--==================== CERTIFICATE 6====================-->
+                    <div class="certificate__content swiper-slide">
+                      <img src="assets/certificates/Coursera R47KZSRY83QH_page-0001.jpg" alt="" class="certificate__img">
+                      <a href="https://www.coursera.org/account/accomplishments/verify/R47KZSRY83QH" target="_blank" class="certif_button">
+                        Detail
+                        <i class="uil uil-arrow-right button__icon"></i>
+                      </a>
+                      </div>
+
+                      <!--==================== CERTIFICATE 7====================-->
+                    <!-- <div class="certificate__content swiper-slide">
+                      <img src="assets/certificates/Coursera R47KZSRY83QH_page-0001.jpg" alt="" class="certificate__img">
+                      <a href="https://github.com/rizkyalbiruni/sync" target="_blank" class="certif_button">
+                        Detail
+                        <i class="uil uil-arrow-right button__icon"></i>
+                      </a>
+                      </div> -->
+
+              	  </div>
+
+                <!-- Add Arrows -->
+                <div class="swiper-button-next">
+                  <i class="uil uil-angle-right-b swiper-portfolio-icon"></i>
+                </div>
+                <div class="swiper-button-prev">
+                  <i class="uil uil-angle-left-b swiper-portfolio-icon"></i>
+                </div>
+                <div class="swiper-pagination"></div>
+              </div>
+
+              <div class="qualification__container container">
+                <div class="qualification__tabs">
+                  <div class="qualification__button button--flex qualification__active" data-target='#education'>
+                    <i class="uil uil-graduation-cap qualification__icon"></i>
+                    Education
+                  </div>
+
+                  <div class="qualification__button button--flex" data-target='#work'>
+                    <i class="uil uil-briefcase-alt qualification__icon"></i>
+                    Work
+                  </div>
+                </div>
+
+                <div class="qualification__sections">
+                  <!--==================== QUALIFICATION CONTENT 1 ====================-->
+                  <div class="qualification__content qualification__active" data-content id="education">
+                    <!--==================== QUALIFICATION 1 ====================-->
+                    <div class="qualification__data">
+                      <div id="web-development">
+                        <h3 class="qualification__title">Web Development</h3>
+                        <span class="qualification__subtitle">Le Wagon Bootcamp</span>
+                        <div class="qualification__calendar">
+                          <i class="uil uil-calendar-alt"></i>
+                          2024
+                        </div>
+                      </div>
+
+                      <div>
+                        <span class="qualification__rounder"></span>
+                        <span class="qualification__line"></span>
+                      </div>
+                    </div>
+
+                    <!--==================== QUALIFICATION 2 ====================-->
+                    <div class="qualification__data">
+                      <div></div>
+
+                      <div>
+                        <span class="qualification__rounder"></span>
+                        <span class="qualification__line"></span>
+                      </div>
+
+                      <div>
+                        <h3 class="qualification__title">Fullstack Development</h3>
+                        <span class="qualification__subtitle">Coursera</span>
+                        <div class="qualification__calendar">
+                          <i class="uil uil-calendar-alt"></i>
+                          2024
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!--==================== QUALIFICATION CONTENT 2 ====================-->
+                  <div class="qualification__content" data-content id="work">
+                    <!--==================== QUALIFICATION 1 ====================-->
+                    <div class="qualification__data">
+                      <div id="graphic-designer">
+                        <h3 class="qualification__title">Graphic Designer</h3>
+                        <span class="qualification__subtitle">Mihmandar - Istanbul</span>
+                        <div class="qualification__calendar">
+                          <i class="uil uil-calendar-alt"></i>
+                          2017 - 2018
+                        </div>
+                      </div>
+
+                      <div>
+                        <span class="qualification__rounder"></span>
+                        <span class="qualification__line"></span>
+                      </div>
+                    </div>
+
+                    <!--==================== QUALIFICATION 2 ====================-->
+                    <div class="qualification__data">
+                      <div></div>
+
+                      <div>
+                        <span class="qualification__rounder"></span>
+                        <span class="qualification__line"></span>
+                      </div>
+
+                      <div>
+                        <h3 class="qualification__title">Project Coordinator</h3>
+                        <span class="qualification__subtitle">Hayder - Istanbul</span>
+                        <div class="qualification__calendar">
+                          <i class="uil uil-calendar-alt"></i>
+                          2018 - 2022
+                        </div>
+                      </div>
+                    </div>
+
+                  </div>
+                </div>
+              </div>
+            </section>
+
+
             <!--==================== ABOUT ====================-->
             <section class="about section" id="about">
               <h2 class="section__title">About Me</h2>
@@ -519,105 +703,7 @@
               </div>
             </section>
 
-            <!--==================== QUALIFICATION ====================-->
-            <section class="qualification section">
-              <h2 class="section__title">Qualification</h2>
-              <span class="section__subtitle">My personal journey</span>
 
-              <div class="qualification__container container">
-                <div class="qualification__tabs">
-                  <div class="qualification__button button--flex qualification__active" data-target='#education'>
-                    <i class="uil uil-graduation-cap qualification__icon"></i>
-                    Education
-                  </div>
-
-                  <div class="qualification__button button--flex" data-target='#work'>
-                    <i class="uil uil-briefcase-alt qualification__icon"></i>
-                    Work
-                  </div>
-                </div>
-
-                <div class="qualification__sections">
-                  <!--==================== QUALIFICATION CONTENT 1 ====================-->
-                  <div class="qualification__content qualification__active" data-content id="education">
-                    <!--==================== QUALIFICATION 1 ====================-->
-                    <div class="qualification__data">
-                      <div id="web-development">
-                        <h3 class="qualification__title">Web Development</h3>
-                        <span class="qualification__subtitle">Le Wagon Bootcamp</span>
-                        <div class="qualification__calendar">
-                          <i class="uil uil-calendar-alt"></i>
-                          2024
-                        </div>
-                      </div>
-
-                      <div>
-                        <span class="qualification__rounder"></span>
-                        <span class="qualification__line"></span>
-                      </div>
-                    </div>
-
-                    <!--==================== QUALIFICATION 2 ====================-->
-                    <div class="qualification__data">
-                      <div></div>
-
-                      <div>
-                        <span class="qualification__rounder"></span>
-                        <span class="qualification__line"></span>
-                      </div>
-
-                      <div>
-                        <h3 class="qualification__title">Theology</h3>
-                        <span class="qualification__subtitle">Istanbul University</span>
-                        <div class="qualification__calendar">
-                          <i class="uil uil-calendar-alt"></i>
-                          2014 - 2018
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <!--==================== QUALIFICATION CONTENT 2 ====================-->
-                  <div class="qualification__content" data-content id="work">
-                    <!--==================== QUALIFICATION 1 ====================-->
-                    <div class="qualification__data">
-                      <div id="graphic-designer">
-                        <h3 class="qualification__title">Graphic Designer</h3>
-                        <span class="qualification__subtitle">Mihmandar - Istanbul</span>
-                        <div class="qualification__calendar">
-                          <i class="uil uil-calendar-alt"></i>
-                          2017 - 2018
-                        </div>
-                      </div>
-
-                      <div>
-                        <span class="qualification__rounder"></span>
-                        <span class="qualification__line"></span>
-                      </div>
-                    </div>
-
-                    <!--==================== QUALIFICATION 2 ====================-->
-                    <div class="qualification__data">
-                      <div></div>
-
-                      <div>
-                        <span class="qualification__rounder"></span>
-                        <span class="qualification__line"></span>
-                      </div>
-
-                      <div>
-                        <h3 class="qualification__title">Humanitarian Officer</h3>
-                        <span class="qualification__subtitle">Hayder - Istanbul</span>
-                        <div class="qualification__calendar">
-                          <i class="uil uil-calendar-alt"></i>
-                          2018 - 2022
-                        </div>
-                      </div>
-                    </div>
-
-                  </div>
-                </div>
-              </div>
-            </section>
 
 
             <!--==================== PROJECT IN MIND ====================-->
@@ -759,7 +845,7 @@
 
         <script>
           var typed = new Typed(".auto-type", {
-            strings: ["Full Stack", "Ruby", "Rails"],
+            strings: ["Full Stack", "Ruby", "Rails", "Python"],
             typeSpeed: 200,
             backSpeed: 70,
             loop: true
