--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                   </a>
                 </li>
                 <li class="nav__item">
-                  <a href="#services" class="nav__link">
-                    <i class="uil uil-briefcase-alt nav__icon"></i> Works
+                  <a href="#qualification" class="nav__link">
+                    <i class="uil uil-briefcase-alt nav__icon"></i> Qualification
                   </a>
                 </li>
                 <li class="nav__item">
@@ -196,6 +196,25 @@
                                   <br>
                                   <br>
                                   <a href="https://quickstart-f6353c2e.myshopify.com/" target="_blank" class="button button--flex button--small portfolio__button">
+                                    Demo
+                                    <i class="uil uil-arrow-right button__icon"></i>
+                                  </a>
+                              </div>
+                            </div>
+
+                            <!--==================== PORTFOLIO 5====================-->
+                            <div class="portfolio__content grid swiper-slide">
+                              <img src="assets/img/currency_change.png" alt="" class="portfolio__img">
+
+                              <div class="portfolio__data">
+                                <h3 class="portfolio__title">Budget Allocation with React.js</h3>
+                                <p class="portfolio__description">Budget Allocation is
+                                  application built with plain React.js, designed to help users manage and allocate their finances efficiently.
+                                  The app features support for multiple currencies, allowing users to track and adjust their budgets
+                                  across different financial contexts.</p>
+                                  <br>
+                                  <br>
+                                  <a href="https://budget-allocation-react-12c60143d337.herokuapp.com/" target="_blank" class="button button--flex button--small portfolio__button">
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
                                   </a>
@@ -391,7 +410,7 @@
 
 
             <!--==================== QUALIFICATION ====================-->
-            <section class="qualification section">
+            <section class="qualification section" id="qualification">
               <h2 class="section__title">Qualification</h2>
               <span class="section__subtitle">certifications and experiances</span>
 
