--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 
                       <div class="skills__data">
                         <div class="skills__title">
-                          <h3 class="skills__name">Ruby</h3>
+                          <h3 class="skills__name">Ruby - Rails</h3>
                           <!-- <span class="skills__number">90%</span> -->
                         </div>
                         <div class="skills__bar">
@@ -267,7 +267,7 @@
 
                       <div class="skills__data">
                         <div class="skills__title">
-                          <h3 class="skills__name">Rails</h3>
+                          <h3 class="skills__name">Python - Panda</h3>
                           <!-- <span class="skills__number">90%</span> -->
                         </div>
                         <div class="skills__bar">
@@ -364,6 +364,16 @@
                       <div class="skills__data">
                         <div class="skills__title">
                           <h3 class="skills__name">JavaScript</h3>
+                          <!-- <span class="skills__number">90%</span> -->
+                        </div>
+                        <div class="skills__bar">
+                          <span class="skills__percentage skills__js"></span>
+                        </div>
+                      </div>
+
+                      <div class="skills__data">
+                        <div class="skills__title">
+                          <h3 class="skills__name">React.js</h3>
                           <!-- <span class="skills__number">90%</span> -->
                         </div>
                         <div class="skills__bar">
