--- a/index.html
+++ b/index.html
@@ -439,6 +439,15 @@
 
                   <!--==================== CERTIFICATE 2====================-->
                   <div class="certificate__content swiper-slide">
+                    <img src="assets/certificates/Coursera 9D9FWRH4Z7QY_page-0001.jpg" alt="" class="certificate__img">
+                    <a href="https://www.coursera.org/account/accomplishments/verify/9D9FWRH4Z7QY" target="_blank" class="certif_button">
+                      Detail
+                      <i class="uil uil-arrow-right button__icon"></i>
+                    </a>
+                  </div>
+
+                  <!--==================== CERTIFICATE 3====================-->
+                  <div class="certificate__content swiper-slide">
                     <img src="assets/certificates/Coursera N3UB8H5PS6GQ_page-0001.jpg" alt="" class="certificate__img">
                     <a href="https://www.coursera.org/account/accomplishments/verify/N3UB8H5PS6GQ" target="_blank" class="certif_button">
                       Detail
@@ -446,7 +455,7 @@
                     </a>
                   </div>
 
-                  <!--==================== CERTIFICATE 3====================-->
+                  <!--==================== CERTIFICATE 4====================-->
                   <div class="certificate__content swiper-slide">
                     <img src="assets/certificates/Coursera NSB7KVEWW2RL_page-0001.jpg" alt="" class="certificate__img">
                     <a href="https://www.coursera.org/account/accomplishments/verify/NSB7KVEWW2RL" target="_blank" class="certif_button">
@@ -456,7 +465,7 @@
                   </div>
 
 
-                    <!--==================== CERTIFICATE 4====================-->
+                    <!--==================== CERTIFICATE 5====================-->
                     <div class="certificate__content swiper-slide">
                     <img src="assets/certificates/Coursera 4WT9JQUEK58R_page-0001.jpg" alt="" class="certificate__img">
                     <a href="https://www.coursera.org/account/accomplishments/verify/4WT9JQUEK58R" target="_blank" class="certif_button">
@@ -465,7 +474,7 @@
                     </a>
                     </div>
 
-                    <!--==================== CERTIFICATE 5====================-->
+                    <!--==================== CERTIFICATE 6====================-->
                     <div class="certificate__content swiper-slide">
                       <img src="assets/certificates/Coursera SGXJ8N85H43Z_page-0001.jpg" alt="" class="certificate__img">
                       <a href="https://www.coursera.org/account/accomplishments/verify/SGXJ8N85H43Z" target="_blank" class="certif_button">
@@ -474,7 +483,7 @@
                       </a>
                       </div>
 
-                      <!--==================== CERTIFICATE 6====================-->
+                      <!--==================== CERTIFICATE 7====================-->
                     <div class="certificate__content swiper-slide">
                       <img src="assets/certificates/Coursera R47KZSRY83QH_page-0001.jpg" alt="" class="certificate__img">
                       <a href="https://www.coursera.org/account/accomplishments/verify/R47KZSRY83QH" target="_blank" class="certif_button">
@@ -483,7 +492,7 @@
                       </a>
                       </div>
 
-                      <!--==================== CERTIFICATE 7====================-->
+                      <!--==================== CERTIFICATE 8====================-->
                     <!-- <div class="certificate__content swiper-slide">
                       <img src="assets/certificates/Coursera R47KZSRY83QH_page-0001.jpg" alt="" class="certificate__img">
                       <a href="https://github.com/rizkyalbiruni/sync" target="_blank" class="certif_button">
