--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                       <p class="home__description">A Ruby developer with essential
                         skills of programming, encompassing both back-end and front-end tools.</p>
                         <div class="about__buttons">
-                          <a href="assets/pdf/CV - EN - New_compressed.pdf" class="button button--flex" target="_blank">
+                          <a href="assets/pdf/rizky-cv-en-gr.pdf" class="button button--flex" target="_blank">
                             Access CV<i class="uil uil-file button__icon"></i>
                           </a>
                         </div>
