second button to download cv fixed

--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
                     </div> -->
 
                     <div class="about__buttons">
-                      <a download="" href="assets/pdf/CV - EN - New_compressed.pdf" class="button button--flex">
+                      <a download="" href="assets/pdf/rizky-cv-en-gr.pdf" class="button button--flex">
                         Download CV<i class="uil uil-download-alt button__icon"></i>
                       </a>
                     </div>
