--- a/index.html
+++ b/index.html
@@ -153,6 +153,22 @@
 
                             <!--==================== PORTFOLIO 2====================-->
                             <div class="portfolio__content grid swiper-slide">
+                              <img src="assets/img/graha-website.png" alt="" class="portfolio__img">
+
+                              <div class="portfolio__data">
+                                <h3 class="portfolio__title">Company Website Development</h3>
+                                <p class="portfolio__description">Developed a full and responsive company website showcasing its achievements using modern web components like Swiper.js for dynamic content presentation.
+                                  Utilized HTML, CSS, JavaScript and Bootstrap to create a well structured, and accessible front-end interface.
+                                </p>
+                                  <a href="https://graha.de/" target="_blank" class="button button--flex button--small portfolio__button">
+                                    Demo
+                                    <i class="uil uil-arrow-right button__icon"></i>
+                                  </a>
+                              </div>
+                            </div>
+
+                            <!--==================== PORTFOLIO 3====================-->
+                            <div class="portfolio__content grid swiper-slide">
                               <img src="assets/img/Screenshot 2024-05-09 102303.png" alt="" class="portfolio__img">
 
                               <div class="portfolio__data">
@@ -167,7 +183,7 @@
                               </div>
                             </div>
 
-                            <!--==================== PORTFOLIO 3====================-->
+                            <!--==================== PORTFOLIO 4====================-->
                             <div class="portfolio__content grid swiper-slide">
                               <img src="assets/img/Screenshot 2024-04-20 151134.png" alt="" class="portfolio__img">
 
@@ -183,7 +199,7 @@
                               </div>
                             </div>
 
-                             <!--==================== PORTFOLIO 4====================-->
+                             <!--==================== PORTFOLIO 5====================-->
                              <div class="portfolio__content grid swiper-slide">
                               <img src="assets/img/Screenshot 2024-05-09 145539.png" alt="" class="portfolio__img">
 
@@ -202,7 +218,7 @@
                               </div>
                             </div>
 
-                            <!--==================== PORTFOLIO 5====================-->
+                            <!--==================== PORTFOLIO 6====================-->
                             <div class="portfolio__content grid swiper-slide">
                               <img src="assets/img/currency_change.png" alt="" class="portfolio__img">
 
@@ -515,12 +531,12 @@
 
               <div class="qualification__container container">
                 <div class="qualification__tabs">
-                  <div class="qualification__button button--flex qualification__active" data-target='#education'>
+                  <div class="qualification__button button--flex" data-target='#education'>
                     <i class="uil uil-graduation-cap qualification__icon"></i>
                     Education
                   </div>
 
-                  <div class="qualification__button button--flex" data-target='#work'>
+                  <div class="qualification__button button--flex qualification__active" data-target='#work'>
                     <i class="uil uil-briefcase-alt qualification__icon"></i>
                     Work
                   </div>
@@ -528,7 +544,7 @@
 
                 <div class="qualification__sections">
                   <!--==================== QUALIFICATION CONTENT 1 ====================-->
-                  <div class="qualification__content qualification__active" data-content id="education">
+                  <div class="qualification__content" data-content id="education">
                     <!--==================== QUALIFICATION 1 ====================-->
                     <div class="qualification__data">
                       <div id="web-development">
@@ -566,8 +582,26 @@
                     </div>
                   </div>
                   <!--==================== QUALIFICATION CONTENT 2 ====================-->
-                  <div class="qualification__content" data-content id="work">
+                  <div class="qualification__content qualification__active" data-content id="work">
                     <!--==================== QUALIFICATION 1 ====================-->
+                    <div class="qualification__data">
+                      <div></div>
+
+                      <div>
+                        <span class="qualification__rounder"></span>
+                        <span class="qualification__line"></span>
+                      </div>
+
+                      <div>
+                        <h3 class="qualification__title">Fullstack Web Developer</h3>
+                        <span class="qualification__subtitle">Graha Int. GmbH - Germany</span>
+                        <div class="qualification__calendar">
+                          <i class="uil uil-calendar-alt"></i>
+                          2024 - Present
+                        </div>
+                      </div>
+                    </div>
+                    <!--==================== QUALIFICATION 2 ====================-->
                     <div class="qualification__data">
                       <div id="graphic-designer">
                         <h3 class="qualification__title">Graphic Designer</h3>
@@ -584,7 +618,7 @@
                       </div>
                     </div>
 
-                    <!--==================== QUALIFICATION 2 ====================-->
+                    <!--==================== QUALIFICATION 3 ====================-->
                     <div class="qualification__data">
                       <div></div>
 
