web developer added

--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
                       </div>
 
                       <div>
-                        <h3 class="qualification__title">Fullstack Web Developer</h3>
+                        <h3 class="qualification__title">Web Developer</h3>
                         <span class="qualification__subtitle">Graha Int. GmbH - Germany</span>
                         <div class="qualification__calendar">
                           <i class="uil uil-calendar-alt"></i>
@@ -917,9 +917,9 @@
 
         <script>
           var typed = new Typed(".auto-type", {
-            strings: ["Full Stack", "Ruby", "Rails", "Python"],
-            typeSpeed: 200,
-            backSpeed: 70,
+            strings: ["Full Stack", "Web", "Ruby", "Rails", "Python"],
+            typeSpeed: 100,
+            backSpeed: 20,
             loop: true
           })
         </script>
