--- a/index.html
+++ b/index.html
@@ -161,7 +161,11 @@
                                   Utilized HTML, CSS, JavaScript and Bootstrap to create a well structured, and accessible front-end interface.
                                 </p>
                                   <a href="https://graha.de/" target="_blank" class="button button--flex button--small portfolio__button">
-                                    Demo
+                                    Demo 1
+                                    <i class="uil uil-arrow-right button__icon"></i>
+                                  </a>
+                                  <a href="https://grahapixel.de/" target="_blank" class="button button--flex button--small portfolio__button">
+                                    Demo 2
                                     <i class="uil uil-arrow-right button__icon"></i>
                                   </a>
                               </div>
@@ -283,7 +287,7 @@
 
                       <div class="skills__data">
                         <div class="skills__title">
-                          <h3 class="skills__name">Python - Panda</h3>
+                          <h3 class="skills__name">Python</h3>
                           <!-- <span class="skills__number">90%</span> -->
                         </div>
                         <div class="skills__bar">
@@ -294,6 +298,16 @@
                       <div class="skills__data">
                         <div class="skills__title">
                           <h3 class="skills__name">PostgreSQL</h3>
+                          <!-- <span class="skills__number">90%</span> -->
+                        </div>
+                        <div class="skills__bar">
+                          <span class="skills__percentage skills__postgresql"></span>
+                        </div>
+                      </div>
+
+                      <div class="skills__data">
+                        <div class="skills__title">
+                          <h3 class="skills__name">PHP</h3>
                           <!-- <span class="skills__number">90%</span> -->
                         </div>
                         <div class="skills__bar">
