--- a/index.html
+++ b/index.html
@@ -931,7 +931,7 @@
 
         <script>
           var typed = new Typed(".auto-type", {
-            strings: ["Full Stack", "Web", "Ruby", "Rails", "Python"],
+            strings: ["Web", "Frontend", "Fullstack", "Ruby on Rails", "Python"],
             typeSpeed: 100,
             backSpeed: 20,
             loop: true
